# RIS

./: README.md  dfOfPermutatedColors.pkl
Anze/: ROS_videos_data.json  analize.py  analizing_data.json  calculations.py  processVideos.py  processing-for-ROS
Anze/homework2/: package.xml
Homework4/exercise3ilja/: CMakeLists.txt  package.xml
Homework4/exercise4ilja/: CMakeLists.txt  package.xml
Ilija/: mapa.pgm  mapa.yaml
Ilija/exercise3/: CMakeLists.txt
Ilija/exercise4/: CMakeLists.txt
exercise2/: CMakeLists.txt
exercise2/launch/: hw2.launch  randomwalk.launch  rectangle.launch
exercise2/scripts/: movement.py
exercise2/src/: client_node.cpp  service_node.cpp
exercise2/srv/: Typeofmovement.srv
exercise3/launch/: amcl_simulation.launch  gmapping_simulation.launch
exercise3/meshes/: readme.txt
exercise3/src/: map_goals.cpp  map_goals_p.cpp  pozdrav.sh
exercise3/worlds/: rins.world
exercise3Ilija/: package.xml
exercise3Ilija(c++)/: CMakeLists.txt
exercise3Ilija(c++)/src/: map_goals.cpp
exercise4/: CMakeLists.txt
exercise4/scripts/: 0.sav  14.sav  (+29 more)
exercise6/: CMakeLists.txt
exercise7/: CMakeLists.txt  package.xml
exercise8/: CMakeLists.txt  package.xml
perception2/: preprocessing.py  safe.json
turtlebot_custom_navigation/: CMakeLists.txt  package.xml
turtlebot_custom_navigation/conf/: custom_console.conf
turtlebot_custom_navigation/launch/: amcl_simulation.launch
turtlebot_custom_navigation/launch/includes/: move_base.launch.xml
turtlebot_custom_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml
(+38 files in other folders)
